Sprint 3 – Admin Authentication Admin entity & repository Admin login Admin-only endpoints for creating drivers and conductors